// Vitest Snapshot v1

exports[`ToggleButton > disabled > should trigger when clicked 1`] = `
<div>
  <button
    class="css-1717d9d-Box e2i8k6n3"
    color="text"
    cursor="pointer"
    disabled=""
    font-size="0"
    height="1"
  >
    disabled
  </button>
</div>
`;

exports[`ToggleButton > not disabled > should trigger when clicked 1`] = `
<div>
  <button
    class="css-1gxxcqd-Box e2i8k6n3"
    color="muted"
    font-size="0"
    height="1"
  >
    not disabled
  </button>
</div>
`;
